fix issue with end game component image clipping when lost

--- a/src/css/components/game/overlay/end-game.component.scss
+++ b/src/css/components/game/overlay/end-game.component.scss
@@ -15,6 +15,10 @@
 	justify-content: center;
 	width: 40%;
 	position: relative;
+
+	&.lost .hero-image {
+		top: 22%;
+	}
 }
 
 .hero-image {
